--- a/html/dashboard/infousuario.html
+++ b/html/dashboard/infousuario.html
@@ -128,8 +128,10 @@
                     class="form-control"
                     name="nombre"
                     id="nombre"
+                    placeholder="Hector Nahuelpan"
                     required
                     maxlength="50"
+                    readonly
                 />
                 </div>
                 <div class="mb-3">
@@ -139,8 +141,10 @@
                     class="form-control"
                     name="rut"
                     id="rut"
+                    placeholder="21289801-9"
                     required
                     onblur="validarRut()"
+                    readonly
                 />
                 <p class="text-danger" id="ruterror"></p>
                 </div>
@@ -150,9 +154,11 @@
                     type="email"
                     class="form-control"
                     name="email"
+                    placeholder="he.nahuelpan@duocuc.cl"
                     id="correo"
                     required
                     maxlength="50"
+                    readonly
                     
                 />
                 </div>
