--- a/html/site/pago.html
+++ b/html/site/pago.html
@@ -22,13 +22,13 @@
       <form action="index.html" class="needs-validation">
         <div class="mb-3 p-3">
           <label for="" class="form-label">Dirección del envío</label>
-          <input type="" class="form-control" id="" required>
+          <input type="" class="form-control" id="" maxlength="50" required>
           <label for="" class="form-label">Comuna</label>
-          <input type="" class="form-control" id="" required>
+          <input type="" class="form-control" id="" maxlength="50" required>
           <label for="" class="form-label">Ciudad</label>
-          <input type="" class="form-control" id="" required>
+          <input type="" class="form-control" id="" maxlength="50" required>
           <label for="" class="form-label">Número de contacto</label>
-          <input type="" class="form-control" id="" required>         
+          <input type="" class="form-control" id="" maxlength="50" pattern="[0-9]" title="Ingrese un número válido" required>         
           <div class="text-center mb-3 ">
             <button type="submit" class="btn btn-success mt-3"> Pagar</button>
           </div>
